# dingdanguanlixitong

./: .gitignore  .launcher_strawberry.scpt  .launcher_strawberry_min.scpt  .strawberry_launcher.c  .strawberry_launcher.c.bak-20260427  AGENTS.md  README.md  pyproject.toml  启动草莓.command  草莓订单管理系统.spec
docs/: order-data-type-spec.md
docs/mobile-helper/: hermes-integration.md
docs/superpowers/plans/: 2026-04-12-feishu-mapping-and-procurement-presets.md  2026-04-12-strawberry-order-management-v1.md  (+4 more)
docs/ui-previews/: history-detail-header-preview.html  system-ui-optimization-v1.html
previews/: expense-workbench-a1.html  expense-workbench-preview.html
scripts/: mobile_helper_server.py
src/strawberry_order_management/: app.py  config.py  expenses.py  finance.py  history.py  media.py  mock_auto_order_service.py  models.py  preview_app.py  profit.py
tests/: conftest.py  test_address_extractor.py  test_auto_order_bridge.py  test_config_store.py  test_expense_store.py  test_finance.py  test_history_store.py  test_mcp_ocr_client.py  test_media.py  test_mobile_order_service.py  test_mock_auto_order_service.py  test_multi_order_parser.py  test_order_image_splitter.py  test_order_parser.py  test_pipeline.py  test_profit.py  test_real_auto_order_service.py  test_supplemental_order.py  test_wechat_callback_service.py
tests/ui/: test_address_extractor_widget.py  test_auto_order_page.py  test_blueprint_window.py  test_expense_page.py  test_history_page.py  test_intake_page.py  test_main_window.py  test_profit_page.py  test_settings_page.py
(+39 files in other folders)
